[package]
name = "host"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmtime = "0.35.1"
wasmtime-wasi = "0.35.1"
anyhow = "1.0.56"

[dev-dependencies]
criterion = "0.3.5"

[[bench]] 
name = "js_date_shared"
harness = false

[[bench]] 
name = "js_date_standalone"
harness = false
